Product一覧付近の修正

--- a/music-app-ios/Locale/en.lproj/Localizable.strings
+++ b/music-app-ios/Locale/en.lproj/Localizable.strings
@@ -8,3 +8,6 @@
 "Library" = "Library";
 "Edit" = "Edit";
 "Button" = "Button";
+"Top Songs" = "Top Songs";
+"Title" = "Title";
+"See All" = "See All";
