--- a/music-app-ios/Locale/en.lproj/Localizable.strings
+++ b/music-app-ios/Locale/en.lproj/Localizable.strings
@@ -11,3 +11,7 @@
 "Top Songs" = "Top Songs";
 "Title" = "Title";
 "See All" = "See All";
+"Home" = "Home";
+"Search" = "Search";
+"Blog" = "Blog";
+"Setting" = "Setting";
