--- a/music-app-ios/Locale/ja.lproj/Localizable.strings
+++ b/music-app-ios/Locale/ja.lproj/Localizable.strings
@@ -11,3 +11,7 @@
 "Top Songs" = "トップソング";
 "Title" = "タイトル";
 "See All" = "すべて見る";
+"Home" = "ホーム";
+"Search" = "検索";
+"Blog" = "ブログ";
+"Setting" = "設定";
